Deps : Setting up shared dependencies

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="dashboardTitle">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+
 </resources>
