--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,14 @@
 
     <style name="dashboardTitle">
         <item name="android:textSize">17sp</item>
+        <item name="android:fontFamily">@font/amaranth_bold</item>
+    </style>
+
+    <style name="dashBoardModuleName">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/greyDim</item>
+        <item name="android:fontFamily">@font/amaranth_bold</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
 </resources>
