--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#29216A</color>
+    <color name="colorPrimary">#1D174F</color>
+    <color name="colorAccent">#4A90E2</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="greyDim">#696969</color>
+    <color name="lightBlue">#1C1C53</color>
 
 </resources>
