--- a/movies/src/main/res/layout/activity_movie.xml
+++ b/movies/src/main/res/layout/activity_movie.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieActivity">
+    tools:context=".ui.views.MovieActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
