--- a/music/src/main/res/layout/activity_music.xml
+++ b/music/src/main/res/layout/activity_music.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MusicActivity">
+    tools:context=".ui.views.MusicActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
