--- a/weather/src/main/res/layout/activity_weatherr.xml
+++ b/weather/src/main/res/layout/activity_weatherr.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.views.WeatherrActivity">
+    tools:context=".ui.views.WeatherActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
