--- a/app/src/main/res/drawable/ic_dashboard_music.xml
+++ b/app/src/main/res/drawable/ic_dashboard_music.xml
@@ -1,9 +1,141 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
-    <path
-        android:fillColor="#4a4e53"
-        android:pathData="M15,6L3,6v2h12L15,6zM15,10L3,10v2h12v-2zM3,16h8v-2L3,14v2zM17,6v8.18c-0.31,-0.11 -0.65,-0.18 -1,-0.18 -1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3L19,8h3L22,6h-5z" />
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="64dp"
+    android:height="64dp"
+    android:viewportWidth="64"
+    android:viewportHeight="64">
+    <path android:pathData="M10,8L10,8c2.209,0 4,-1.791 4,-4v0c0,-2.209 -1.791,-4 -4,-4h0C7.791,0 6,1.791 6,4v0C6,6.209 7.791,8 10,8z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:centerX="36.833"
+                android:centerY="35.917"
+                android:gradientRadius="26"
+                android:tileMode="mirror"
+                android:type="radial">
+                <item
+                    android:color="#FFAFEEFF"
+                    android:offset="0" />
+                <item
+                    android:color="#FFBBF1FF"
+                    android:offset="0.193" />
+                <item
+                    android:color="#FFD7F8FF"
+                    android:offset="0.703" />
+                <item
+                    android:color="#FFE1FAFF"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="M57.5,64L57.5,64c1.933,0 3.5,-1.567 3.5,-3.5v0c0,-1.933 -1.567,-3.5 -3.5,-3.5h0c-1.933,0 -3.5,1.567 -3.5,3.5v0C54,62.433 55.567,64 57.5,64z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:centerX="81.417"
+                android:centerY="29.917"
+                android:gradientRadius="28.77"
+                android:tileMode="mirror"
+                android:type="radial">
+                <item
+                    android:color="#FFAFEEFF"
+                    android:offset="0" />
+                <item
+                    android:color="#FFBBF1FF"
+                    android:offset="0.193" />
+                <item
+                    android:color="#FFD7F8FF"
+                    android:offset="0.703" />
+                <item
+                    android:color="#FFE1FAFF"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="M62,20.5L62,20.5c0,-2.485 -2.015,-4.5 -4.5,-4.5H44c-2.209,0 -4,-1.791 -4,-4v0c0,-2.209 1.791,-4 4,-4h2c2.209,0 4,-1.791 4,-4v0c0,-2.209 -1.791,-4 -4,-4L22,0c-2.209,0 -4,1.791 -4,4v0c0,2.209 1.791,4 4,4h2c1.657,0 3,1.343 3,3v0c0,1.657 -1.343,3 -3,3H10.5C8.567,14 7,15.567 7,17.5v0c0,1.933 1.567,3.5 3.5,3.5H13c1.657,0 3,1.343 3,3v0c0,1.657 -1.343,3 -3,3H5c-2.761,0 -5,2.239 -5,5v0c0,2.761 2.239,5 5,5h4.5c1.933,0 3.5,1.567 3.5,3.5v0c0,1.933 -1.567,3.5 -3.5,3.5H6c-2.209,0 -4,1.791 -4,4v0c0,2.209 1.791,4 4,4h6.5c1.381,0 2.5,1.119 2.5,2.5v0c0,1.381 -1.119,2.5 -2.5,2.5h0C10.567,57 9,58.567 9,60.5v0c0,1.933 1.567,3.5 3.5,3.5h35c1.933,0 3.5,-1.567 3.5,-3.5v0c0,-1.933 -1.567,-3.5 -3.5,-3.5H42c-1.105,0 -2,-0.895 -2,-2v0c0,-1.105 0.895,-2 2,-2h12c2.209,0 4,-1.791 4,-4v0c0,-2.209 -1.791,-4 -4,-4h-8.5c-1.381,0 -2.5,-1.119 -2.5,-2.5v0c0,-1.381 1.119,-2.5 2.5,-2.5H49c2.209,0 4,-1.791 4,-4v0c0,-2.209 -1.791,-4 -4,-4h-1.5c-1.933,0 -3.5,-1.567 -3.5,-3.5v0c0,-1.933 1.567,-3.5 3.5,-3.5h10C59.985,25 62,22.985 62,20.5z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:centerX="31"
+                android:centerY="32"
+                android:gradientRadius="31.504"
+                android:tileMode="mirror"
+                android:type="radial">
+                <item
+                    android:color="#FFAFEEFF"
+                    android:offset="0" />
+                <item
+                    android:color="#FFBBF1FF"
+                    android:offset="0.193" />
+                <item
+                    android:color="#FFD7F8FF"
+                    android:offset="0.703" />
+                <item
+                    android:color="#FFE1FAFF"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="M59,40L59,40c-2.209,0 -4,-1.791 -4,-4v0c0,-2.209 1.791,-4 4,-4h0c2.209,0 4,1.791 4,4v0C63,38.209 61.209,40 59,40z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:centerX="35.917"
+                android:centerY="35.417"
+                android:gradientRadius="27.938"
+                android:tileMode="mirror"
+                android:type="radial">
+                <item
+                    android:color="#FFAFEEFF"
+                    android:offset="0" />
+                <item
+                    android:color="#FFBBF1FF"
+                    android:offset="0.193" />
+                <item
+                    android:color="#FFD7F8FF"
+                    android:offset="0.703" />
+                <item
+                    android:color="#FFE1FAFF"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="M44,8h-7h-2c-2.209,0 -4,1.791 -4,4v9v14.21C29.499,34.442 27.802,34 26,34c-6.075,0 -11,4.925 -11,11s4.925,11 11,11s11,-4.925 11,-11V21h12c2.209,0 4,-1.791 4,-4C53,12.029 48.971,8 44,8z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="34"
+                android:endY="56"
+                android:startX="34"
+                android:startY="8"
+                android:tileMode="mirror"
+                android:type="linear">
+                <item
+                    android:color="#FF42D778"
+                    android:offset="0" />
+                <item
+                    android:color="#FF34B171"
+                    android:offset="0.996" />
+                <item
+                    android:color="#FF34B171"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="M15,45c0,5.652 4.265,10.304 9.751,10.924C26.601,55.572 28,53.952 28,52c0,-2.209 -1.791,-4 -4,-4h-1.5c-1.933,0 -3.5,-1.567 -3.5,-3.5s1.567,-3.5 3.5,-3.5h6c1.933,0 3.5,-1.567 3.5,-3.5c0,-0.952 -0.383,-1.813 -1,-2.444v0.155C29.499,34.442 27.802,34 26,34C19.925,34 15,38.925 15,45z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="23.5"
+                android:endY="55.924"
+                android:startX="23.5"
+                android:startY="34"
+                android:tileMode="mirror"
+                android:type="linear">
+                <item
+                    android:color="#FF42D778"
+                    android:offset="0" />
+                <item
+                    android:color="#FF3DCA76"
+                    android:offset="0.428" />
+                <item
+                    android:color="#FF34B171"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
