--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#29216A</color>
-    <color name="colorPrimary">#1D174F</color>
-    <color name="colorAccent">#4A90E2</color>
+    <color name="colorPrimaryDark">#1769aa</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorAccent">#4dabf5</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
