--- a/app/src/main/res/drawable/bg_textview_messsage.xml
+++ b/app/src/main/res/drawable/bg_textview_messsage.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorAccent" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary" />
+        android:color="@color/colorAccent" />
 
     <corners android:radius="6dp" />
 
