finalized working on movies module

--- a/movies/src/main/res/layout/activity_movie.xml
+++ b/movies/src/main/res/layout/activity_movie.xml
@@ -6,18 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.views.MovieActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewMovies"
+    <fragment
+        android:id="@+id/navHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_small"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="12"
-        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/row_movie_item"
-        tools:spanCount="2" />
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/movies_nav_graph"
+        app:defaultNavHost="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
