--- a/movies/src/main/res/layout/fragment_character_details.xml
+++ b/movies/src/main/res/layout/fragment_character_details.xml
@@ -3,47 +3,131 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="#eeeeee">
 
-    <ImageView
-        android:id="@+id/bannerImgView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="320dp"
-        android:src="@drawable/ic_movie_placeholder"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        app:cardCornerRadius="10dp"
+        app:elevation="5dp">
+        <ImageView
+            android:id="@+id/bannerImgView"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:src="@drawable/ic_movie_placeholder"
+            android:scaleType="centerCrop"/>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/nameTxtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:text="Toxic Rick"/>
+        android:text="Character Details"
+        android:textSize="14sp"
+        android:textAllCaps="true"
+        android:layout_margin="16dp"
+        android:textColor="@color/black"/>
 
-    <TextView
-        android:id="@+id/genderTxtView"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:text="Male"
-        />
+        android:layout_margin="6dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        android:background="@color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="16dp">
 
-    <TextView
-        android:id="@+id/typeTxtView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:text="Rick's Toxic Side"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name"
+                android:textSize="14sp"/>
+            <TextView
+                android:id="@+id/nameTxtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:textSize="16sp"
+                tools:text="Toxic Rick"
+                android:textColor="@color/black"/>
 
-    <TextView
-        android:id="@+id/statusTxtView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:text="Dead"
-        />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#eeeeee"
+                android:layout_marginTop="16dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gender"
+                android:textSize="14sp"
+                android:layout_marginTop="16dp"/>
+
+            <TextView
+                android:id="@+id/genderTxtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                tools:text="Male"
+                android:layout_marginTop="6dp"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#eeeeee"
+                android:layout_marginTop="16dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Type"
+                android:textSize="14sp"
+                android:layout_marginTop="16dp"/>
+
+
+            <TextView
+                android:id="@+id/typeTxtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                tools:text="Rick's Toxic Side"
+                android:layout_marginTop="6dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#eeeeee"
+                android:layout_marginTop="16dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status"
+                android:textSize="14sp"
+                android:layout_marginTop="16dp"/>
+
+            <TextView
+                android:id="@+id/statusTxtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+               android:textColor="@color/black"
+                android:layout_marginTop="6dp"
+                tools:text="Dead"
+                />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
 
 </LinearLayout>
