--- a/movies/src/main/res/layout/fragment_character_details.xml
+++ b/movies/src/main/res/layout/fragment_character_details.xml
@@ -89,7 +89,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Type"
+                android:text="Origin"
                 android:textSize="14sp"
                 android:layout_marginTop="16dp"/>
 
